--- a/src/main/resources/templates/general/home.html
+++ b/src/main/resources/templates/general/home.html
@@ -1,41 +1,36 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Главная страница</title>
+    <title>Главная страница | СИАРСП</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
-
     <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="/js/javascript.js"></script>
-    <style>
-        html, body {
-            height: 100vh; /* 100% от высоты окна просмотра */
-            margin: 0; /* Удаление стандартных отступов */
-            padding: 0; /* Удаление внутренних отступов */
-            overflow: hidden; /* Предотвращение любой прокрутки */
-        }
-    </style>
 </head>
-<body class="mb-5">
+<body>
 <header th:insert="~{blocks/header :: header}"></header>
+
 <main>
-    <!--    Секция 1-->
-    <section class="text-center fon-container">
-        <div class="row py-lg-5">
-            <div class="col-lg-6 col-md-8 mx-auto">
-                <h3 class="fw-light">Тема</h3>
-                <h3 class="fw-light">_____________</h3>
-                <h5 class="lead text-body-secondary">Студент: _______________</h5>
+    <!-- Hero Section -->
+    <section class="home-hero">
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <h3 class="mb-3">Автоматизированная информационная система</h3>
+                    <h3 class="mb-4">для предприятия малого бизнеса</h3>
+                    <h5 class="lead">Студент: Левчук Е.А.</h5>
+                    <h5 class="lead">МАИ филиал "Восход"</h5>
+                </div>
             </div>
         </div>
     </section>
 
-    <!--    Секция 2-->
-
-    <section class="image-section" style="background-image: url('/images/fon_home.jpg');">
-    </section>
-    <div th:insert="~{blocks/footer :: footer}"></div>
+    <!-- Image Section -->
+    <section class="home-image-section" style="background-image: url('/images/fon_home.jpg');"></section>
 </main>
+
+<div th:insert="~{blocks/footer :: footer}"></div>
 </body>
 </html>
