--- a/src/main/resources/templates/general/home.html
+++ b/src/main/resources/templates/general/home.html
@@ -20,7 +20,7 @@
                 <div class="col-lg-8 mx-auto">
                     <h3 class="mb-3">Автоматизированная информационная система</h3>
                     <h3 class="mb-4">для предприятия малого бизнеса</h3>
-                    <h5 class="lead">Студент: Левчук Е.А.</h5>
+                    <h5 class="lead">Студент: </h5>
                     <h5 class="lead">МАИ филиал "Восход"</h5>
                 </div>
             </div>
