Исправления перед началом работы

--- a/src/main/resources/templates/employee/admin/editAdmin.html
+++ b/src/main/resources/templates/employee/admin/editAdmin.html
@@ -35,7 +35,7 @@
                     </div>
                     <div class="col-12">
                         <input type="text" class="form-control" name="inputPatronymicName"
-                               id="inputPatronymicName" required placeholder="Отчество"
+                               id="inputPatronymicName" placeholder="Отчество"
                                maxlength="50" th:value="${employeeDTO.getPatronymicName()}">
                     </div>
                 </div>
