--- a/src/main/resources/templates/employee/admin/employees/addEmployee.html
+++ b/src/main/resources/templates/employee/admin/employees/addEmployee.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="col-12">
                         <input type="text" class="form-control" name="inputPatronymicName"
-                               id="inputPatronymicName" required placeholder="Отчество" maxlength="50">
+                               id="inputPatronymicName" placeholder="Отчество" maxlength="50">
                     </div>
                 </div>
             </div>
